[package]
name = "point-counter-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
serial_int = "2.0.1"
sqids = "0.4.1"
tokio = { version = "1.38.0", features = ["full"] }
tungstenite = "0.23.0"
